PRIMER CAMBIO QUE SE REALIZA

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="description" content="Este es un ejemplo de HTML5">
   <meta name="keywords" content="HTML5, CSS3, JavaScript">
-  <title>Primer laboratorio de HTML5</title>
+  <title>PRIMER CAMBIO de HTML5</title>
   <link rel="stylesheet" href="css/mystyle.css">
    <link rel="stylesheet" href="iconeapis/style.css">
 </head>
