--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="utf-8">
   <meta name="description" content="Este es un ejemplo de HTML5">
   <meta name="keywords" content="HTML5, CSS3, JavaScript">
-  <title>PRIMER CAMBIO de HTML5</title>
+  <title>PRIMER CAMBIO angular de HTML5</title>
   <link rel="stylesheet" href="css/mystyle.css">
    <link rel="stylesheet" href="iconeapis/style.css">
 </head>
 <body>
 <div id="envoltura">
   <header id="cabecera">
-    <h1>Este es el título principal del sitio web</h1>
+    <h1>cambio principal del sitio web</h1>
   </header >
   <nav id="menu">
                 <a href="inicio.html"><span class="icon-add_alert azul zom"></span>Inicio</a>
