--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <div id="envoltura">
   <header id="cabecera">
-    <h1>cambio principal del sitio web</h1>
+    <h1>cambios principal del sitio web</h1>
   </header >
   <nav id="menu">
                 <a href="inicio.html"><span class="icon-add_alert azul zom"></span>Inicio</a>
