--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@ body, html {
     <a href="#home" class="w3-bar-item w3-button w3-wide">LOGO</a>
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
-      <a href="#about" class="w3-bar-item w3-button">ABOUT</a>
-      <a href="#team" class="w3-bar-item w3-button"><i class="fa fa-user"></i> TEAM</a>
-      <a href="#work" class="w3-bar-item w3-button"><i class="fa fa-th"></i> WORK</a>
-      <a href="#pricing" class="w3-bar-item w3-button"><i class="fa fa-usd"></i> PRICING</a>
-      <a href="#contact" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a>
+      <a href="#INICIO" class="w3-bar-item w3-button">INICIO</a>
+      <a href="#EQUIPO" class="w3-bar-item w3-button"><i class="fa fa-user"></i> EQUIPO</a>
+      <a href="#TRABAJO" class="w3-bar-item w3-button"><i class="fa fa-th"></i> TRABAJO</a>
+      <a href="#PRODUCTOS" class="w3-bar-item w3-button"><i class="fa fa-usd"></i> PRODUCTOS</a>
+      <a href="#CONTACTANOS" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACTANOS</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
@@ -49,11 +49,11 @@ body, html {
 <!-- Sidebar on small screens when clicking the menu icon -->
 <nav class="w3-sidebar w3-bar-block w3-black w3-card-2 w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidebar">
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close &times;</a>
-  <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT</a>
-  <a href="#team" onclick="w3_close()" class="w3-bar-item w3-button">TEAM</a>
-  <a href="#work" onclick="w3_close()" class="w3-bar-item w3-button">WORK</a>
-  <a href="#pricing" onclick="w3_close()" class="w3-bar-item w3-button">PRICING</a>
-  <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">CONTACT</a>
+  <a href="#INICIO" onclick="w3_close()" class="w3-bar-item w3-button">INICIO</a>
+  <a href="#EQUIPO" onclick="w3_close()" class="w3-bar-item w3-button">EQUIPO</a>
+  <a href="#TRABAJO" onclick="w3_close()" class="w3-bar-item w3-button">TRABAJO</a>
+  <a href="#PRODUCTOS" onclick="w3_close()" class="w3-bar-item w3-button">PRODUCTOS</a>
+  <a href="#CONTACTANOS" onclick="w3_close()" class="w3-bar-item w3-button">CONTACTANOS</a>
 </nav>
 
 <!-- Header with full-height image -->
