--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ body, html {
 </nav>
 
 <!-- Header with full-height image -->
-<header class="imagen w3-display-container w3-grayscale-min" id="home">
+<header class="back w3-display-container w3-grayscale-min" id="home">
   <div class="w3-display-left w3-text-white" style="padding:48px">
     <span class="w3-jumbo w3-hide-small">Start something that matters</span><br>
     <span class="w3-xxlarge w3-hide-large w3-hide-medium">Start something that matters</span><br>
