--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="css/imagen.css">
+<link rel="stylesheet" href="css/imagen.css"> 
 <style>
 body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 body, html {
@@ -34,7 +34,7 @@ body, html {
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
       <a href="#INICIO" class="w3-bar-item w3-button">INICIO</a>
-      <a href="#EQUIPO" class="w3-bar-item w3-button"><i class="fa fa-user"></i> EQUIPO</a>
+      <a href="#EQUIPO" class="w3-bar-item w3-button"><i class="fa fa-user"></i> EQUIPOO</a>
       <a href="#TRABAJO" class="w3-bar-item w3-button"><i class="fa fa-th"></i> TRABAJO</a>
       <a href="#PRODUCTOS" class="w3-bar-item w3-button"><i class="fa fa-usd"></i> PRODUCTOS</a>
       <a href="#CONTACTANOS" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACTANOS</a>
